--- a/HakatonProject/wwwroot/html/user/index.html
+++ b/HakatonProject/wwwroot/html/user/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,15 +14,15 @@
    <div class="dashboard-container">
         <nav class="sidebar">
             <div class="sidebar-logo">
-                <img src="assets/logo.png" alt="logo">
+                <img src="../assets/logo.png" alt="logo">
                 Active Graph</div>
             <ul class="sidebar-nav">
-                <li><a href="#"><span class="iconify" data-icon="mynaui:home"></span></a></li>
+                <li><a href="index.html" style="color: #fff;"><span class="iconify" data-icon="mynaui:home"></span></a></li>
                 <li><a href="#"><span class="iconify" data-icon="material-symbols:interests-rounded"></span></i></a></li>
-                <li><a href="#"><span class="iconify" data-icon="material-symbols:event-note-rounded"></span></i></a></li>
+                <li><a href="Events.html"><span class="iconify" data-icon="material-symbols:event-note-rounded"></span></i></a></li>
             </ul>
             <div class="sidebar-profile">
-                <span class="iconify" data-icon="iconamoon:profile"></span>
+                <a href="../admin/index.html"><span class="iconify" data-icon="iconamoon:profile"></span></a>
             </div>
         </nav>
 
@@ -106,6 +106,6 @@
         </main>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="scripts/script.js"></script>
+    <script src="../scripts/script.js"></script>
 </body>
 </html>
