Страницы: Аналитика, Интересы, Аутификация(не подвязана ни к чему)

--- a/HakatonProject/wwwroot/html/admin/Events.html
+++ b/HakatonProject/wwwroot/html/admin/Events.html
@@ -26,7 +26,7 @@
                 Active Graph</div>
             <ul class="sidebar-nav">
                 <li><a href="index.html"><span class="iconify" data-icon="mynaui:home"></span></a></li>
-                <li><a href="#"><span class="iconify" data-icon="uim:analytics"></span></a></li>
+                <li><a href="Analytics.html"><span class="iconify" data-icon="uim:analytics"></span></a></li>
                 <li><a href="Events.html" style="color: #fff;"><span class="iconify" data-icon="material-symbols:event-note-rounded"></span></a></li>
             </ul>
             <div class="sidebar-profile">
@@ -63,7 +63,7 @@
 </div>
 <div class="input-group">
     <label for="sample-textarea">Описание</label>
-    <textarea id="sample-textarea" class="styled-textarea" placeholder="Введите развернутое описание..." rows="6"></textarea>
+    <textarea id="sample-textarea" class="styled-textarea" placeholder="это мероприятие, на котором команды специалистов в области IT (программисты, дизайнеры, менеджеры) за ограниченное время решают поставленную задачу, создавая прототип продукта или решение конкретной проблемы." rows="6"></textarea>
 </div>
 <div class="input-time">
     
