--- a/HakatonProject/wwwroot/html/user/index.html
+++ b/HakatonProject/wwwroot/html/user/index.html
@@ -18,7 +18,7 @@
                 Active Graph</div>
             <ul class="sidebar-nav">
                 <li><a href="index.html" style="color: #fff;"><span class="iconify" data-icon="mynaui:home"></span></a></li>
-                <li><a href="#"><span class="iconify" data-icon="material-symbols:interests-rounded"></span></i></a></li>
+                <li><a href="Interes.html"><span class="iconify" data-icon="material-symbols:interests-rounded"></span></i></a></li>
                 <li><a href="Events.html"><span class="iconify" data-icon="material-symbols:event-note-rounded"></span></i></a></li>
             </ul>
             <div class="sidebar-profile">
